# rspell

./: .gitmodules  Cargo.toml  LICENSE.Apache20.txt  LICENSE.MIT.txt  README.md  build.rs
.github/workflows/: rust.yml
examples/: spellcheck.rs
files/: config.toml
src/: config.rs  data.rs  hunspell.rs  lib.rs
