[package]
name = "rspell"
version = "0.1.1"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018" 
description = "A simple practical spellcheker."
repository = "https://github.com/casimir/rspell"
keywords = ["spelling", "spellchecking"]
categories = ["text-processing"]
license = "Apache-2.0 OR MIT"
readme = "README.md"

[features]
local_files = []
tools = ["env_logger", "structopt"]

[dependencies]
curl = "0.4"
directories = "2.0"
encoding_rs = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
unicode-segmentation = "1.6"

env_logger = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
env_logger = "0.7"

[[bin]]
name = "rspell-dic"
required-features = ["tools"]

[package.metadata.docs.rs]
features = ["local_files"]